--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,93 @@
-.navbar{
-    padding:.5rem;
-    background-color: #287BFA ;
+.navbar {
+    padding: .5rem;
+    background-color: #287BFA;
 }
 
-.logo{
+.logo {
     outline: 2px solid #000;
     border-radius: 50%;
 }
-.navbar-collapse{
+
+.navbar-collapse {
     align-items: center;
     justify-content: space-between;
 }
 
-section{
+section {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
 }
 
-h1{
+h1 {
     font-size: 2.5rem;
-    font-family: 'Rubik Moonrocks', cursive;
+    font-family: monospace,'Times New Roman', Times, serif;
 }
 
-.hero{
+.hero {
     min-height: 450px;
     background-color: #f5f6f7;
     text-align: center;
 }
 
-.hero-principal{
-    padding:3rem;
+.hero-principal {
+    padding: 3rem;
 }
 
-.hero-principal h2{
+.hero-principal h2 {
     font-size: 1.5rem;
-    color:#615151;
+    color: #615151;
 }
 
-.hero-imagen{
+.hero-imagen {
     width: 200px;
     height: 200px;
     margin: 20px;
     box-shadow: -5px 5px #000;
 }
 
-.seccion-oscura{
-    color:#fff;
+.seccion-oscura {
+    color: #fff;
     background-color: #000;
 }
 
-.seccion-oscura{
-    color:#fff;
+.seccion-oscura {
+    color: #fff;
     background-color: #000;
 }
 
-.sobre-mi{
+.sobre-mi {
     height: 500px;
     padding: 10px;
 }
 
-.sobre-mi .contenedor{
+.sobre-mi .contenedor {
     max-width: 600px;
     text-align: center;
 }
 
-.seccion-titulo{
+.seccion-titulo {
     font-size: 2rem;
     padding: 15px 0;
     font-family: 'Rubik Moonrocks', cursive;
 }
 
-.seccion-texto{
+.seccion-texto {
     font-size: 1.2rem;
 }
 
-.experiencia{
+.experiencia {
     padding: 40px 40px 40px 40px;
 }
 
-.experiencia-titulo{
+.experiencia-titulo {
     font-size: 20px;
     font-weight: bold;
     margin: 10px 0;
 }
 
-.experiencia i{
+.experiencia i {
     font-size: 1.5rem;
     padding: 8px 14px;
     color: #7ade30;
@@ -94,11 +95,11 @@ h1{
     border-radius: 50%;
 }
 
-.experiencia .row div{
+.experiencia .row div {
     height: 250px;
 }
 
-.experiencia .columna{
+.experiencia .columna {
     padding: 20px;
     border: 2px solid #8080804d;
     display: flex;
@@ -109,44 +110,44 @@ h1{
     transition: .5s;
 }
 
-.experiencia .columna:hover{
-    color:#fff;
+.experiencia .columna:hover {
+    color: #fff;
     background-color: #121232;
 }
 
-.badges-contenedor{
+.badges-contenedor {
     font-size: 19px;
     font-weight: light;
     margin: 10px 0;
 }
 
-.badge{
+.badge {
     margin: 5px;
 }
 
-.proyectos-recientes{
+.proyectos-recientes {
     padding: 40px;
 }
 
-.texto-negro{
-    color:#000;
+.texto-negro {
+    color: #000;
 }
 
-.texto-blanco{
-    color:#fff;
+.texto-blanco {
+    color: #fff;
 }
 
-.seccion-descripcion{
+.seccion-descripcion {
     font-size: 1.5rem;
-    color:#584e4e;
+    color: #584e4e;
 }
 
-.seccion-texto{
+.seccion-texto {
     font-size: 1.2rem;
 }
 
 
-.proyectos-recientes img{
+.proyectos-recientes img {
     height: 100%;
     width: 100%;
     padding: 10px;
@@ -155,35 +156,36 @@ h1{
     transition: all 0.2s ease;
 }
 
-.proyectos-contenedor{
+.proyectos-contenedor {
     padding-top: 60px;
-    margin-bottom:40px;
+    margin-bottom: 40px;
 }
 
-.proyecto{
+.proyecto {
     position: relative;
 }
-.overlay{
+
+.overlay {
     transition: all 0.2s ease;
     opacity: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
 
-.overlay p{
+.overlay p {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 0;
 }
 
-.proyecto:hover img{
+.proyecto:hover img {
     opacity: 0.2;
 }
 
-.proyecto:hover .overlay{
+.proyecto:hover .overlay {
     opacity: 1;
 }
 
@@ -191,27 +193,27 @@ h1{
     max-width: 1100px;
     min-height: 200px;
     padding: 20px;
-  }
-  
-  .contacto .rectangulo {
+}
+
+.contacto .rectangulo {
     margin-top: -5rem;
     background-color: #287BFA;
     border-radius: 10px;
     box-shadow: 0px 1px 4px 1px white;
-  }
-  
-  .contacto .row {
+}
+
+.contacto .row {
     width: 100%;
     display: flex;
     align-items: center;
-  }
-  
-  .contacto .descripcion {
+}
+
+.contacto .descripcion {
     color: white;
     font-size: 1.2rem;
-  }
-  
-  .contacto button {
+}
+
+.contacto button {
     color: white;
     font-weight: bold;
     background-color: transparent;
@@ -220,44 +222,44 @@ h1{
     margin: 10px;
     border-radius: 100px;
     transition: all 0.2s ease-in-out;
-  }
-  
-  .contacto button:hover {
+}
+
+.contacto button:hover {
     background-color: white;
     color: black;
-  }
-  
-  .contacto button i {
+}
+
+.contacto button i {
     color: white;
     font-size: 1.3rem;
     transition: all 0.2s ease-in-out;
-  }
-  
-  .contacto button:hover i {
-    color: black;
-  }
+}
 
-footer{
+.contacto button:hover i {
+    color: black;
+}
+
+footer {
     min-height: 500px;
 }
 
-.footer-logo{
+.footer-logo {
     height: 80px;
     width: 80px;
     margin: 10px;
 }
 
-.footer-texto{
+.footer-texto {
     font-size: 1.5rem;
     padding: 20px;
     margin-bottom: 30px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.iconos-redes-sociales a{
+.iconos-redes-sociales a {
     width: 50px;
     height: 50px;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     padding: 2px;
@@ -267,63 +269,98 @@ footer{
     transition: all 0.2s ease-in;
 }
 
-.iconos-redes-sociales i{
+.iconos-redes-sociales i {
     color: #fff;
     font-size: 1.5rem;
     transition: all 0.2s ease-in;
 }
 
-.iconos-redes-sociales a:hover{
+.iconos-redes-sociales a:hover {
     background-color: #fff;
     border: 2px solid #287BFA;
 }
 
-.iconos-redes-sociales a:hover i{
+.iconos-redes-sociales a:hover i {
     color: #000;
 }
 
-.derechos-reservados{
+.derechos-reservados {
     font-size: 15px;
     color: #cecece;
     padding: 20px;
 }
 
 .btn-flotante {
-	font-size: 15px; /* Cambiar el tamaño de la tipografia */
-	font-weight: bold; /* Fuente en negrita o bold */
-	color: #ffffff; /* Color del texto */
-	border-radius: 5px; /* Borde del boton */
-	background-color: #287BFA; /* Color de fondo */
-	padding: 15px 25px; /* Relleno del boton */
-	position: fixed;
+    font-size: 15px;
+    /* Cambiar el tamaño de la tipografia */
+    font-weight: bold;
+    /* Fuente en negrita o bold */
+    color: #cecece;
+    /* Color del texto */
+    border-radius: 5px;
+    /* Borde del boton */
+    background-color: #287BFA;
+    /* Color de fondo */
+    padding: 15px 25px;
+    /* Relleno del boton */
+    position: fixed;
     text-decoration: none;
-	bottom: 40px;
-	right: 40px;
-	transition: all 300ms ease 0ms;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	z-index: 99;
+    bottom: 40px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    z-index: 99;
 }
+
 .btn-flotante:hover {
-	background-color: #2c2fa5; /* Color de fondo al pasar el cursor */
-	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
-	transform: translateY(-7px);
+    background-color: #cecece;
+    color:#287BFA;
+    /* Color de fondo al pasar el cursor */
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
 }
+
+
+.typewriter h1 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
+
 @media only screen and (max-width: 600px) {
- 	.btn-flotante {
-		font-size: 14px;
-		padding: 12px 20px;
-		bottom: 20px;
-		right: 20px;
-	}
+    .btn-flotante {
+        font-size: 14px;
+        padding: 12px 20px;
+        bottom: 20px;
+        right: 20px;
+    }
 }
+
 @media screen and (min-width:767px) {
-    .hero-inferior-imagen{
+    .hero-inferior-imagen {
         max-width: 600px;
     }
 }
 
 @media screen and (max-width:767px) {
-    .navbar-brand{
+    .navbar-brand {
         display: none;
     }
 }
