--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,10 @@ h1 {
     box-shadow: 0px 1px 4px 1px white;
 }
 
+.img-pr{
+    width: 200px;
+    height: 200px;
+}
 .contacto .row {
     width: 100%;
     display: flex;
@@ -351,16 +355,24 @@ footer {
         bottom: 20px;
         right: 20px;
     }
+    
 }
 
 @media screen and (min-width:767px) {
     .hero-inferior-imagen {
         max-width: 600px;
     }
+    .typewriter{
+        display: block;
+    }
+
 }
 
 @media screen and (max-width:767px) {
     .navbar-brand {
+        display: none;
+    }
+    .typewriter{
         display: none;
     }
 }
